Update to components + new BanStick check